@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-09-07T01:02:11Z",
-  "count_outdated" : 496,
-  "uniques_outdated" : 323,
+  "timestamp" : "2024-09-10T01:04:09Z",
+  "count_outdated" : 497,
+  "uniques_outdated" : 324,
   "count" : 498,
   "uniques" : 325,
   "clones" : [
-    {
-      "timestamp": "2024-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-09-06T00:00:00Z",
       "count": 1,
